--- a/StuiPodcast.Infra/StuiPodcast.Infra.csproj
+++ b/StuiPodcast.Infra/StuiPodcast.Infra.csproj
@@ -7,9 +7,10 @@
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="1.1.2" />
     <PackageReference Include="CodeHollow.FeedReader" Version="1.2.6" />
-    <PackageReference Include="LibVLCSharp" Version="3.9.4" />
+    <PackageReference Include="LibVLCSharp" Version="3.8.4" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.9" />
     <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.20" />
   </ItemGroup>
 
   <PropertyGroup>
