--- a/StuiPodcast.App/StuiPodcast.App.csproj
+++ b/StuiPodcast.App/StuiPodcast.App.csproj
@@ -1,37 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\StuiPodcast.Core\StuiPodcast.Core.csproj" />
-    <ProjectReference Include="..\StuiPodcast.Infra\StuiPodcast.Infra.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\StuiPodcast.Core\StuiPodcast.Core.csproj" />
+        <ProjectReference Include="..\StuiPodcast.Infra\StuiPodcast.Infra.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="LibVLCSharp" Version="3.8.4" />
-    <PackageReference Include="Serilog" Version="4.3.0" />
-    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageReference Include="Terminal.Gui" Version="1.14.0" />
-    <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.20" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="LibVLCSharp" Version="3.8.4" />
+        <PackageReference Include="Serilog" Version="4.3.0" />
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+        <PackageReference Include="Terminal.Gui" Version="1.14.0" />
+        <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.20" />
+    </ItemGroup>
 
     <PropertyGroup>
-    <OutputType>Exe</OutputType>           <!-- nur bei App -->
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-</PropertyGroup>
-
-        <!-- ⬇️ Deine Versions-PropertyGroup kommt ALS ZWEITE hinzu, NICHT ersetzen -->
-<PropertyGroup>
-<Version>0.0.0</Version> <!-- CI überschreibt -->
-<AssemblyVersion>$(VersionMajor).$(VersionMinor).0.0</AssemblyVersion>
-<FileVersion>$(VersionMajor).$(VersionMinor).$(VersionPatch).0</FileVersion>
-<AssemblyInformationalVersion>$(Version)</AssemblyInformationalVersion>
-
-<Company>podliner</Company>
-<Product>podliner</Product>
-<Authors>Tim Kicker</Authors>
-<RepositoryUrl>https://github.com/timkicker/podliner</RepositoryUrl>
-</PropertyGroup>
-
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net9.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
 </Project>
