--- a/StuiPodcast.App/StuiPodcast.App.csproj
+++ b/StuiPodcast.App/StuiPodcast.App.csproj
@@ -23,6 +23,11 @@
                           Condition="$([MSBuild]::IsOSPlatform('Windows'))" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Command\Handler\" />
+      <Folder Include="Command\Module\" />
+    </ItemGroup>
+
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
