--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -173,18 +173,20 @@ jobs:
           name: podliner-${{ matrix.rid }}
           path: dist/podliner-${{ matrix.rid }}.tar.gz
 
-  publish:
+    publish:
     name: publish release
     runs-on: ubuntu-latest
     needs: [build-linux, build-windows, build-macos]
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
 
       - name: Extract version from tag
         id: meta
+        shell: bash
         run: |
           VER="${GITHUB_REF##*/}"
-          echo "version=${VER#v}" >> $GITHUB_OUTPUT
+          echo "version=${VER#v}" >> "$GITHUB_OUTPUT"
 
       - name: Download all artifacts
         uses: actions/download-artifact@v4
@@ -194,37 +196,67 @@ jobs:
       - name: Gather into dist/
         shell: bash
         run: |
+          set -euo pipefail
           mkdir -p dist
           find gathered -type f -name 'podliner-*' -exec cp {} dist/ \;
-          cp scripts/install.ps1 dist/install.ps1
-          cp scripts/install.sh dist/install.sh
+          cp scripts/install.ps1      dist/install.ps1
+          cp scripts/install.sh       dist/install.sh
           cp scripts/install-macos.sh dist/install-macos.sh
 
       - name: Generate SHA256SUMS
         shell: bash
         run: |
+          set -euo pipefail
           cd dist
           sha256sum * > SHA256SUMS
           cat SHA256SUMS
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref_name }}
-          name: podliner ${{ steps.meta.outputs.version }}
-          draft: false
-          prerelease: ${{ contains(github.ref_name, '-rc') || contains(github.ref_name, '-beta') }}
-          generate_release_notes: true
-          files: |
-            dist/podliner-linux-x64.tar.gz
-            dist/podliner-linux-arm64.tar.gz
-            dist/podliner-osx-x64.tar.gz
-            dist/podliner-osx-arm64.tar.gz
-            dist/podliner-win-x64.zip
-            dist/install.sh
-            dist/install.ps1
-            dist/install-macos.sh
-            dist/SHA256SUMS
+      - name: Create/Update GitHub Release (robust w/ retry)
+        env:
+          GH_TOKEN: ${{ github.token }}
+          TAG: ${{ github.ref_name }}
+          VER: ${{ steps.meta.outputs.version }}
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          PRE=""
+          if [[ "$TAG" == *-rc* || "$TAG" == *-beta* ]]; then
+            PRE="--prerelease"
+          fi
+
+          if ! gh release view "$TAG" >/dev/null 2>&1; then
+            gh release create "$TAG" \
+              --title "podliner ${VER}" \
+              --generate-notes $PRE
+          fi
+
+          upload() {
+            gh release upload "$TAG" \
+              dist/podliner-linux-x64.tar.gz \
+              dist/podliner-linux-arm64.tar.gz \
+              dist/podliner-osx-x64.tar.gz \
+              dist/podliner-osx-arm64.tar.gz \
+              dist/podliner-win-x64.zip \
+              dist/install.sh \
+              dist/install.ps1 \
+              dist/install-macos.sh \
+              dist/SHA256SUMS \
+              --clobber
+          }
+
+          for i in 1 2 3; do
+            if upload; then
+              echo "Assets uploaded."
+              exit 0
+            fi
+            echo "Release upload failed (attempt $i). Retrying..."
+            sleep $((5 * i))
+          done
+
+          echo "Release upload failed after retries." >&2
+          exit 1
+
 
   aur_publish:
     name: Publish AUR (podliner-bin)
