--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,8 @@ jobs:
           dotnet-version: "9.0.x"
 
       - name: Restore
-        run: dotnet restore
         shell: bash
+        run: dotnet restore
 
       - name: Publish (self-contained)
         shell: bash
@@ -52,8 +52,7 @@ jobs:
       - name: Package tar.gz
         shell: bash
         run: |
-          mkdir -p dist
-          mkdir -p package/podliner
+          mkdir -p dist package/podliner
           cp publish/${{ matrix.rid }}/StuiPodcast.App package/podliner/podliner
           chmod +x package/podliner/podliner
           cp LICENSE package/podliner/ 2>/dev/null || true
@@ -139,8 +138,8 @@ jobs:
           dotnet-version: "9.0.x"
 
       - name: Restore
-        run: dotnet restore
         shell: bash
+        run: dotnet restore
 
       - name: Publish (self-contained)
         shell: bash
@@ -159,8 +158,7 @@ jobs:
       - name: Package tar.gz
         shell: bash
         run: |
-          mkdir -p dist
-          mkdir -p package/podliner
+          mkdir -p dist package/podliner
           cp publish/${{ matrix.rid }}/StuiPodcast.App package/podliner/podliner
           chmod +x package/podliner/podliner
           cp LICENSE package/podliner/ 2>/dev/null || true
@@ -173,7 +171,7 @@ jobs:
           name: podliner-${{ matrix.rid }}
           path: dist/podliner-${{ matrix.rid }}.tar.gz
 
-    publish:
+  publish:
     name: publish release
     runs-on: ubuntu-latest
     needs: [build-linux, build-windows, build-macos]
@@ -219,7 +217,6 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
           PRE=""
           if [[ "$TAG" == *-rc* || "$TAG" == *-beta* ]]; then
             PRE="--prerelease"
@@ -257,12 +254,10 @@ jobs:
           echo "Release upload failed after retries." >&2
           exit 1
 
-
   aur_publish:
     name: Publish AUR (podliner-bin)
     needs: publish
     runs-on: ubuntu-latest
-    # Lauf in einem Arch-Container, damit makepkg/pacman vorhanden sind
     container:
       image: archlinux:base
     env:
@@ -325,7 +320,7 @@ jobs:
             echo "Required assets not found (podliner-linux-*.tar.gz)"; exit 1
           fi
 
-          echo "ver=$VER" >> $GITHUB_OUTPUT
+          echo "ver=$VER"  >> $GITHUB_OUTPUT
           echo "x64=$X64" >> $GITHUB_OUTPUT
           echo "arm=$ARM" >> $GITHUB_OUTPUT
 
@@ -346,8 +341,6 @@ jobs:
 
       - name: Update PKGBUILD with version, URLs, sums
         run: |
-          # Stelle sicher, dass der Template-PKGBUILD im Repo liegt:
-          # packaging/aur/podliner-bin/PKGBUILD
           cp packaging/aur/${AUR_PACKAGE}/PKGBUILD /tmp/aur/PKGBUILD
           sed -i "s/^pkgver=.*/pkgver=${{ steps.rel.outputs.ver }}/" /tmp/aur/PKGBUILD
           sed -i "s|releases/download/v.*/podliner-linux-x64.tar.gz|${{ steps.rel.outputs.x64 }}|" /tmp/aur/PKGBUILD
@@ -365,6 +358,5 @@ jobs:
           GIT_SSH_COMMAND: ssh -F ~/.ssh/config
         run: |
           git add PKGBUILD .SRCINFO
-          git commit -m "${{ env.AUR_PACKAGE }} ${{ steps.rel.outputs.ver }} (automated)"
+          git commit -m "${{ env.AUR_PACKAGE }} ${{ steps.rel.outputs.ver }} (automated)" || echo "No changes to commit"
           git push origin HEAD:master
-
