--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -293,7 +293,7 @@ jobs:
           ( cd /tmp/release-verify && sha256sum -c SHA256SUMS )
 
   aur_publish:
-    name: Publish AUR (podliner-bin)
+    name: publish AUR (podliner-bin)
     needs: publish
     runs-on: ubuntu-latest
     container:
@@ -408,13 +408,15 @@ jobs:
             X64SUM="${{ steps.sums.outputs.x64sum }}"
             ARMSUM="${{ steps.sums.outputs.armsum }}"
 
-            # set pkgver
+            # read old version BEFORE modifying
+            OLDVER=$(grep -E "^pkgver=" "$PKG" | head -n1 | cut -d= -f2 || true)
+
+            # set pkgver once
             awk -v ver="$NEWVER" '"'"'/^pkgver=/{print "pkgver=" ver; next} {print}'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
 
-            # pkgrel: reset on new version or bump if same
-            CURVER=$(grep -E "^pkgver=" "$PKG" | head -n1 | cut -d= -f2 || true)
+            # pkgrel: reset to 1 on new version, otherwise bump by 1
             if grep -qE "^pkgrel=" "$PKG"; then
-              if [ "$CURVER" = "$NEWVER" ]; then
+              if [ "$OLDVER" = "$NEWVER" ]; then
                 awk '"'"'/^pkgrel=/{sub(/^pkgrel=/,""); print "pkgrel=" ($0+1); next} {print}'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
               else
                 awk '"'"'/^pkgrel=/{print "pkgrel=1"; next} {print}'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
@@ -423,20 +425,25 @@ jobs:
               echo "pkgrel=1" >> "$PKG"
             fi
 
-            # rewrite sources + checksums coherently
+            # normalize whitespace and rewrite sources/checksums robustly
+            awk '"'"'{gsub(/\r/,""); print}'"'"' "$PKG" > "$PKG.norm" && mv "$PKG.norm" "$PKG"
+
             cat > /tmp/rewrite.awk <<'"'"'AWK'"'"'
             BEGIN { pv = "$" "{pkgver}" }
-            /^source_x86_64=/      { print "source_x86_64=(\"podliner-" pv "-linux-x64.tar.gz::" ENVIRON["X64"] "\")"; next }
-            /^source_aarch64=/     { print "source_aarch64=(\"podliner-" pv "-linux-arm64.tar.gz::" ENVIRON["ARM"] "\")"; next }
-            /^sha256sums_x86_64=/  { print "sha256sums_x86_64=(\"" ENVIRON["X64SUM"] "\")"; next }
-            /^sha256sums_aarch64=/ { print "sha256sums_aarch64=(\"" ENVIRON["ARMSUM"] "\")"; next }
-                                     { print }
+            # unify by matching key name only, ignore preceding spaces
+            /^[[:space:]]*source_x86_64=/      { print "source_x86_64=(\"podliner-" pv "-linux-x64.tar.gz::" ENVIRON["X64"] "\")"; next }
+            /^[[:space:]]*source_aarch64=/     { print "source_aarch64=(\"podliner-" pv "-linux-arm64.tar.gz::" ENVIRON["ARM"] "\")"; next }
+            /^[[:space:]]*sha256sums_x86_64=/  { print "sha256sums_x86_64=(\"" ENVIRON["X64SUM"] "\")"; next }
+            /^[[:space:]]*sha256sums_aarch64=/ { print "sha256sums_aarch64=(\"" ENVIRON["ARMSUM"] "\")"; next }
+                                               { print }
             AWK
+
             awk -f /tmp/rewrite.awk "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
 
             echo "----- PKGBUILD after rewrite -----"
-            sed -n "1,160p" "$PKG"
+            sed -n "1,200p" "$PKG"
           '
+
 
       - name: Generate .SRCINFO (as builder)
         run: |
